fix stretcher linkes

--- a/src/css/front/latest-projects.scss
+++ b/src/css/front/latest-projects.scss
@@ -205,7 +205,7 @@ width: 50%;
   .latestProjectsSectionveelLines{
     display: flex;
     justify-content: center;
-    width: 400px;
+    width: 90%;
   }
   .img div{
     border-radius: 15px;
